--- a/app/views/contacts/_item_for_employee.slim
+++ b/app/views/contacts/_item_for_employee.slim
@@ -9,7 +9,7 @@ dl
       dd
         = link_to t('common.link.edit'), [:edit, contact]
         = " | "
-        = link_to t('contacts.item.remove'), [contact, email], :method => :delete, confirm: t("common.messages.delete_confirm")
+        = link_to t('contacts.item.remove'), [contact, email], :method => :delete, data: {confirm: t("common.messages.delete_confirm")}
   - contact.phone_numbers.each do |phone_number|
     dt
       = t('contacts.item.phonenumber')
@@ -20,7 +20,7 @@ dl
       dd
         = link_to t('common.link.edit'), [:edit, contact]
         = " | "
-        = link_to t('contacts.item.remove'), [contact, email], :method => :delete, confirm: t("common.messages.delete_confirm")
+        = link_to t('contacts.item.remove'), [contact, email], :method => :delete, data: {confirm: t("common.messages.delete_confirm")}
   - contact.addresses.each do |address|
     dt
       = t('contacts.item.address')
@@ -31,7 +31,7 @@ dl
       dd
         = link_to t('common.link.edit'), [:edit, contact]
         = " | "
-        = link_to t('contacts.item.remove'), [contact, email], :method => :delete, confirm: t("common.messages.delete_confirm")
+        = link_to t('contacts.item.remove'), [contact, email], :method => :delete, data: {confirm: t("common.messages.delete_confirm")}
   dt
     = Document.human_attribute_name("tags")
   dd
