--- a/app/views/taxbills/_error.html.erb
+++ b/app/views/taxbills/_error.html.erb
@@ -26,7 +26,7 @@
               <td style="text-align: center">
                 <%= link_to t("common.link.edit"), [:edit, taxbill, item] %>
                 |
-                <%= link_to t("common.link.destroy"), [taxbill, item], :method => :delete, confirm: t("common.messages.delete_confirm") %>
+                <%= link_to t("common.link.destroy"), [taxbill, item], :method => :delete, data: {confirm: t("common.messages.delete_confirm")} %>
               </td>
             </td>
           <% end %>
