--- a/app/views/business_clients/show.html.slim
+++ b/app/views/business_clients/show.html.slim
@@ -3,7 +3,7 @@
 #show_command
   = link_to t('common.title.edit'), [:edit, business_client]
   = " | "
-  = link_to t('common.title.destroy'), business_client, :method => :delete, confirm: t("common.messages.delete_confirm")
+  = link_to t('common.title.destroy'), business_client, :method => :delete, data: {confirm: t("common.messages.delete_confirm")}
   = " | "
   = link_to t('common.title.list'), :business_clients
 h2
