--- a/app/views/change_histories/show.html.slim
+++ b/app/views/change_histories/show.html.slim
@@ -1,7 +1,7 @@
 #show_command
   = link_to t('common.title.edit'), [:edit, change_history]
   = " | "
-  = link_to t('common.title.destroy'), change_history, :method => :delete, confirm: t("common.messages.delete_confirm")
+  = link_to t('common.title.destroy'), change_history, :method => :delete, data: {confirm: t("common.messages.delete_confirm")}
   = " | "
   = link_to t('common.title.list'), :change_histories
 
