--- a/app/views/documents/show.html.slim
+++ b/app/views/documents/show.html.slim
@@ -3,7 +3,7 @@
 #show_command
   = link_to t('common.title.edit'), edit_document_path(document)
   = " | "
-  = link_to t('common.title.destroy'), document, :method => :delete, confirm: t("common.messages.delete_confirm")
+  = link_to t('common.title.destroy'), document, :method => :delete, data: {confirm: t("common.messages.delete_confirm")}
   = " | "
   = link_to t('common.title.list'), documents_path
 h2
