--- a/app/views/holidays/show.html.slim
+++ b/app/views/holidays/show.html.slim
@@ -1,7 +1,7 @@
 #show_command
   = link_to t('common.title.edit'), edit_holiday_path(holiday)
   = " | "
-  = link_to t('common.title.destroy'), holiday_path(holiday), :method => :delete, :confirm => t("common.messages.delete_confirm")
+  = link_to t('common.title.destroy'), holiday_path(holiday), :method => :delete, data: {data: {confirm: t("common.messages.delete_confirm")}}
   = " | "
   = link_to t('common.title.list'), holidays_path
 
