--- a/app/views/payroll_categories/show.slim
+++ b/app/views/payroll_categories/show.slim
@@ -1,7 +1,7 @@
 #show_command
   = link_to t('common.title.edit'), edit_payroll_category_path()
   = " | "
-  = link_to t('common.title.destroy'), payroll_category, :method => :delete, confirm: t("common.messages.delete_confirm")
+  = link_to t('common.title.destroy'), payroll_category, :method => :delete, data: {confirm: t("common.messages.delete_confirm")}
   = " | "
   = link_to t('common.title.list'), payroll_categories_path()
 
