--- a/app/views/permissions/index.html.slim
+++ b/app/views/permissions/index.html.slim
@@ -13,6 +13,6 @@ table
 	    td
 	    	= link_to 'Edit', [:edit, permission]
 	    td
-	    	= link_to 'Destroy', permission, :method => :delete, confirm: t("common.messages.delete_confirm")
+	    	= link_to 'Destroy', permission, :method => :delete, data: {confirm: t("common.messages.delete_confirm")}
 br
 = link_to 'New permission', [:new, :permission]
