--- a/app/views/section_enrollment/enrollments/attach_item.html.slim
+++ b/app/views/section_enrollment/enrollments/attach_item.html.slim
@@ -5,7 +5,7 @@
     - @item.attachments.each do |attachment|
       li
         = attachment.original_filename
-        = link_to "[x]", delete_attachment_enrollment_path(attachment_id: attachment.id, name: params[:name]), method: :delete, confirm: t("common.messages.delete_confirm")
+        = link_to "[x]", delete_attachment_enrollment_path(attachment_id: attachment.id, name: params[:name]), method: :delete, data: {confirm: t("common.messages.delete_confirm")}
 
 
 = form_tag [:attach, @enrollment], multipart: true do
