--- a/app/views/contacts/_form.html.slim
+++ b/app/views/contacts/_form.html.slim
@@ -1,9 +1,10 @@
 #show_command
-  = link_to t('common.title.back'), @contact
+  = link_to t('common.title.back'), redirect_url_if_subject
 
 h2= t("common.title.#{action_name}")
 
 = form_for @contact, html: {multipart: true} do |f|
+  = hidden_field_tag :subject, params[:subject]
   .box
     = f.error_messages
     p
