--- a/app/views/employees/index.html.slim
+++ b/app/views/employees/index.html.slim
@@ -9,7 +9,7 @@
 
 #show_command
   - if current_person.admin?
-    = link_to t('employees.new.title'), find_employees_path
+    = link_to t('employees.new.title'), find_contact_employees_path
 h2
   = t('employees.index.total')
   ' :
