--- a/app/views/card_approved_sources/show.html.slim
+++ b/app/views/card_approved_sources/show.html.slim
@@ -28,4 +28,4 @@ h2= "#{card_approved_source.creditcard.nickname}: #{card_approved_source.creditc
     = dtdd card_approved_source, "card_type"
     = dtdd card_approved_source, "canceled_at"
     = dtdd card_approved_source, "status"
-    = dtdd card_approved_source, "will_be_paied_at"
+    = dtdd card_approved_source, "will_be_paied_at_strftime"
