--- a/app/views/projects/show.html.slim
+++ b/app/views/projects/show.html.slim
@@ -11,6 +11,7 @@ h2
     = dtdd project, "revenue"
     = dtdd project, "started_on"
     = dtdd project, "ending_on"
+    = dtdd project, "owner_name"
     - if project.completed?
       = dtdd project, "ended_on"
       dt
