--- a/app/views/used_vacations/show.html.slim
+++ b/app/views/used_vacations/show.html.slim
@@ -10,6 +10,7 @@ h2= t('.title')
 
 .box
   dl
+    = dtdd used_vacation, "type_title"
     = dtdd used_vacation, "from"
     = dtdd used_vacation, "to"
     dt
