--- a/app/views/main/_main_menu2.html.slim
+++ b/app/views/main/_main_menu2.html.slim
@@ -47,6 +47,7 @@ div class={current_person.admin? ? "admin" : ""}
           ul
             li= link_to t("commutes.index.title"), :commutes
             li= link_to t("vacations.index.title"), :vacations
+            li= link_to t("vacation_types.title"), :vacation_types
             li= link_to t("payments.title"), :payments
             li= link_to t("accounts.index.title"), :controller => "accounts"
             li= link_to t("groups.title"), :controller => "groups"
