--- a/app/views/contacts/_find.html.slim
+++ b/app/views/contacts/_find.html.slim
@@ -9,9 +9,10 @@
     = text_field_tag 'query', params[:query]
 
 #show_command
-  = link_to "새로운 연락처 만들기", new_contact_path(redirect_to_subject: redirect_to_subject)
+  = link_to t('contacts.find.new'), new_contact_path(redirect_to_subject: redirect_to_subject)
 
-h2 인사정보에 이용될 연락처 찾기
+h2
+  = t('contacts.find.find_contact')
 
 - unless @contacts.empty?
   table#list-table
