--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -2,18 +2,34 @@ body {
   font-family: Verdana, sans-serif;
   font-size: 12px;
   color: #484848;
-  margin: 0;
+  margin: 50px 0 0 0;
   padding: 0;
-/*  min-width: 900px;
-*/}
-
-#top-menu {
-  background: black;
-  color: #fff;
-  height: 1.8em;
-  font-size: 0.8em;
-  padding: 2px 2px 0px 6px;
 }
+
+/* Twitter boostraped css */
+
+#list-table {
+  @extend .table;
+  @extend .table-striped;
+  tr.selectable { cursor: pointer;}
+  tr.selectable:hover {background-color: lightgrey;}
+  td.selectable {cursor: pointer;}
+}
+
+#show_command {
+  float: right;
+  a { 
+    @extend .btn;
+    @extend .btn-primary;
+  }
+  a[data-method=delete] { 
+    @extend .btn-danger;
+  }
+}
+
+
+
+/* legacy css */
 
 #wrapper {
   margin: 0;
@@ -196,57 +212,11 @@ div.flash.alert {
   margin-left: 100px;
 }
 
-#show_command {
-  float: right;
-}
-
 .currency {
   text-align: right;
   width: 100%;
 }
 
-
-#list-table
-{
-  font-size: 12px;
-  width: 100%;
-  text-align: left;
-  border-collapse: collapse;
-}
-#list-table th
-{
-  padding: 8px 2px;
-  font-weight: normal;
-  font-size: 14px;
-  border-bottom: 2px solid #6678b1;
-  border-right: 30px solid #fff;
-  border-left: 30px solid #fff;
-  color: #039;
-  text-align: left;
-}
-
-#list-table tr.selectable {
-  cursor: pointer;
-}
-#list-table tr.selectable:hover {
-  background-color: lightgrey;
-}
-
-#list-table td.selectable {
-  cursor: pointer;
-}
-
-#list-table td.selectable:hover {
-  background-color: lightgrey;
-}
-
-#list-table td
-{
-  padding: 12px 2px 0px 2px;
-  border-right: 30px solid #fff;
-  border-left: 30px solid #fff;
-  color: #669;
-}
 .numrow
 {
   text-align: right;
@@ -562,3 +532,6 @@ ul#css3menu li.sublast>a{
 .today {
 	background-color: yellow;
 }
+
+
+
