table show link sample 추가

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -46,15 +46,15 @@ body {
 
 /***** Links *****/
 
-a, a:link, a:visited {
-  color: #2A5685;
-  text-decoration: none;
-}
+// a, a:link, a:visited {
+//   color: #2A5685;
+//   text-decoration: none;
+// }
 
-a:hover, a:active {
-  color: #c61a1a;
-  text-decoration: underline;
-}
+// a:hover, a:active {
+//   color: #c61a1a;
+//   text-decoration: underline;
+// }
 
 a img {
   border: 0;
