--- a/app/views/postings/index.html.slim
+++ b/app/views/postings/index.html.slim
@@ -12,11 +12,14 @@ h2= t("common.title.list")
         th= Posting.human_attribute_name("posted_at")
         th= Posting.human_attribute_name("description")
         th= Posting.human_attribute_name("total_amount")
+        th.link_button_area
     tbody
       - @postings.each do |posting|
         tr.selectable onclick="location.href='#{posting_path(posting)}'"
           td= posting.posted_at
           td= posting.description
           td= number_to_currency posting.total_amount
+          td.link_button_area
+            = link_to '상세보기', posting, class: 'btn btn-primary link_to_show_page'
 - else
   h3= t('.empty')
