--- a/app/views/projects/show.html.slim
+++ b/app/views/projects/show.html.slim
@@ -14,7 +14,7 @@ h2
     = dtdd project, "ending_on"
     = dtdd project, "owner_name"
     dt
-      = t('projects.show.accounts')
+      = t('projects.show.employees')
     dd
       - for employee in project.employees
         = employee.fullname
