--- a/app/views/main/_this_week.html.slim
+++ b/app/views/main/_this_week.html.slim
@@ -10,7 +10,11 @@ div.this_week
         -  unless holiday? holidays, day
           - today_v.each do |tv|
             - unless tv.vacation == nil
-              li= t("used_vacations.vacation") + tv.vacation.employee.fullname
+              li
+                = t("used_vacations.vacation")
+                = tv.vacation.employee.fullname
+                - if tv.type
+                  = "(#{tv.type.title})"
   center
     '  &laquo;
     = link_to t("main.index.prevweek"), root_path(page: @page - 1)
