--- a/app/views/layouts/main.html.erb
+++ b/app/views/layouts/main.html.erb
@@ -8,19 +8,22 @@
 		<%= stylesheet_link_tag "application" %>
 		<%= javascript_include_tag "application" %>
 		<meta name="viewport" content="width=device-width; initial-scale=1.0, maximum-scale=1.0, account-scalable=no"/>
+		
 		<!-- Add "maximum-scale=1" to fix the weird iOS auto-zoom bug on orientation changes. -->
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js">
 		</script>
 	</head>
 	<body>
 		<%= render(:partial => "shared/header") %>
-		<% if flash[:notice] %>
-			<div class="flash notice">
-				<%= flash[:notice] %>
-			</div>
-		<% end %>
-		<%= yield %>
+		<div class='container'>
+			<% if flash[:notice] %>
+				<div class="flash notice">
+					<%= flash[:notice] %>
+				</div>
+			<% end %>
+			<%= yield %>
 
-		<%= render(:partial => "shared/footer") %>
+			<%= render(:partial => "shared/footer") %>
+		</div>
 	</body>
 </html>
